--- a/info.yaml
+++ b/info.yaml
@@ -3,7 +3,7 @@ project:
   title:        "Digital Lock"      # Project title
   author:       "Francisco Hernandez"      # Your name
   discord:      "frankyh"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  "A 4 button input digital lock with seven segment display."      # One line description of what your project does
+  description:  "A 4-button input digital lock with seven segment display."      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     2000000       # Clock frequency in Hz (or 0 if not applicable)
 
